// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthereumSig should create propose envelope 1`] = `
{
  "data": {
    "authenticator": "0x00e6533da3322019c3e26bd6942b647a74593af805021003bab707267717952a",
    "executionStrategy": {
      "addr": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
      "params": [
        "0x101",
      ],
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
    "strategies": [
      {
        "address": "0x04ad4a117a2b047fc3e25bf52791bc8f29a0871ac3c41a3e176f18c8a1087815",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "message": {
      "authenticator": "0x00e6533da3322019c3e26bd6942b647a74593af805021003bab707267717952a",
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "address": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
        "params": [
          "0x101",
        ],
      },
      "metadataURI": [
        "0x697066733a2f2f516d4e726d36784b75696231544874576b694e35434b7442",
        "0x4565725143447055746d6744716961553278446d6361",
      ],
      "salt": "0x0",
      "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
      "userProposalValidationParams": [
        "1",
        "0",
        "1",
        "0",
      ],
    },
    "signature": [
      "0x6fe1a75d7fe5f6a9fe7b4d5c6092d636fc1255243f19ae84eb9ac02dbf08ca1a",
      "0x3e533dfdaf39b0572a96994bf6b3477a78207fca091234d9d36e85b4e38dde66",
      "0x1c",
    ],
  },
}
`;

exports[`EthereumSig should create update proposal envelope 1`] = `
{
  "data": {
    "authenticator": "0x00e6533da3322019c3e26bd6942b647a74593af805021003bab707267717952a",
    "executionStrategy": {
      "addr": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
      "params": [
        "0x101",
      ],
    },
    "metadataUri": "ipfs://QmNrm6xKuib1THtWkiN5CKtBEerQCDpUtmgDqiaU2xDmca",
    "proposal": 1,
    "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "message": {
      "authenticator": "0x00e6533da3322019c3e26bd6942b647a74593af805021003bab707267717952a",
      "author": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
      "executionStrategy": {
        "address": "0x040de235a2b53e921d37c2ea2b160750ca2e94f01d709f78f870963559de8fbe",
        "params": [
          "0x101",
        ],
      },
      "metadataURI": [
        "0x697066733a2f2f516d4e726d36784b75696231544874576b694e35434b7442",
        "0x4565725143447055746d6744716961553278446d6361",
      ],
      "proposalId": "0x1",
      "salt": "0x0",
      "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
    },
    "signature": [
      "0x553bfff496ec68e5629b6541381eed91bfc99a3e599613b31942cc5e7fa1513d",
      "0x60433bd02700834b763483ec56db07a39de52cfaa5944cafbe54cc857066da59",
      "0x1b",
    ],
  },
}
`;

exports[`EthereumSig should create vote envelope 1`] = `
{
  "data": {
    "authenticator": "0x00e6533da3322019c3e26bd6942b647a74593af805021003bab707267717952a",
    "choice": 1,
    "proposal": 1,
    "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
    "strategies": [
      {
        "address": "0x04ad4a117a2b047fc3e25bf52791bc8f29a0871ac3c41a3e176f18c8a1087815",
        "index": 0,
      },
    ],
  },
  "signatureData": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "message": {
      "authenticator": "0x00e6533da3322019c3e26bd6942b647a74593af805021003bab707267717952a",
      "choice": "0x1",
      "metadataURI": [],
      "proposalId": "0x1",
      "space": "0x06330d3e48f59f5411c201ee2e9e9ccdc738fb3bb192b0e77e4eda26fa1a22f8",
      "userVotingStrategies": [
        {
          "index": 0,
          "params": [
            "0x0",
          ],
        },
      ],
      "voter": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    },
    "signature": [
      "0xf0ddcfb41a0198cfa50a67223f34f7f1cf35b470be8691de6f6475a2e76f07a6",
      "0x74d92170c0ae78cb736a313d377a1145f41bb45615580a093c36a3cd2b3231c3",
      "0x1c",
    ],
  },
}
`;
